--- a/index.css
+++ b/index.css
@@ -108,16 +108,28 @@ strong, b {
     font-weight: bold;
 }
 
+body {
+    /* background-color: #d9d8e8; */
+    background-color: rgba(10, 191, 188, 0.5);
+}
 .container {
-    width: 880px;
+    max-width: 880px;
     margin: 0 auto;
-    
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.2), 0px 0px 5px 0px rgba(0, 0, 0, 0.14), 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
+        
 }
 
 header {
     /* margin: 20% 0; */
     text-align: center;
-    background-image: linear-gradient(45deg, #4fa49a, #4361c2);
+    /* background-image: linear-gradient(45deg, #4fa49a, #4361c2); */
+    /* background-image: linear-gradient(45deg, #FC466B, #3F5EFB); */
+    /* background-image: linear-gradient(75deg, #E5E5BE, #003973); */
+    background: #0ABFBC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0ABFBC, #FC354C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    
     height: 80vh;
     display: flex;
     flex-direction: column;
@@ -126,12 +138,25 @@ header {
     color: white;
 }
 
+.instructions {
+    background-color: rgb(207, 248, 247);
+    padding: 5% 3%;
+}
+
 .psalm {
-    border-top: 1px solid black
+    border-top: 1px solid rgb(5, 75, 74);;
+    /* background-color: white; */
+    background-color: rgb(207, 248, 247);
+    padding: 5% 3%;
+    color: rgb(5, 75, 74);
 }
 
 footer {
-    background-image: linear-gradient(45deg, #4fa49a, #4361c2);
+    /* background-image: linear-gradient(45deg, #4fa49a, #4361c2); */
+    background: #0ABFBC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0ABFBC, #FC354C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     color: white;
     padding: 5% 0;
     display: flex;
