--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ table {
 
 html, body {
     height: 100%;
-    /* font-family: 'Titillium Web', sans-serif; */
+    font-family: 'Open Sans', sans-serif;
     font-size: 62.5%;
 }
 
@@ -139,7 +139,7 @@ header {
     justify-content: center;
     color: white;
 
-    margin: 0 0 10px 0;
+    margin: 0 1% 10px 1%;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.2), 0px 0px 5px 0px rgba(0, 0, 0, 0.14), 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
 }
@@ -147,7 +147,7 @@ header {
 .instructions {
     background-color: rgb(207, 248, 247);
     padding: 5% 3%;
-    margin: 10px 0;
+    margin: 10px 1%;
     border-radius: 10px;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.2), 0px 0px 5px 0px rgba(0, 0, 0, 0.14), 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
     
@@ -159,7 +159,7 @@ header {
     background-color: rgb(207, 248, 247);
     padding: 5% 3%;
     color: rgb(5, 75, 74);
-    margin: 10px 0;
+    margin: 10px 1%;
     border-radius: 10px;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.2), 0px 0px 5px 0px rgba(0, 0, 0, 0.14), 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
     
@@ -168,6 +168,7 @@ header {
 @media (max-width: 500px) {
     .instructions, .psalm {
         padding: 5% 7%;
+        margin: 5px 0;
     }
 }
 
@@ -183,7 +184,7 @@ footer {
     align-items: center;
     justify-content: center;
 
-    /* margin: 0 0 10px 0; */
+    margin: 0 1% 0 1%;
     border-radius: 10px 10px 0px 0px;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.2), 0px 0px 5px 0px rgba(0, 0, 0, 0.14), 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
 }
